--- a/mural-bd/styles.css
+++ b/mural-bd/styles.css
@@ -1,123 +1,154 @@
-* { font-family: Verdana; font-size: 96%; margin:0; padding:0;color: rgb(0, 0, 0);}
-label { display: block; margin-top: 10px; }
-label.error { float: none; color: rgb(61, 0, 243); margin: 0 .5em 0 0; vertical-align: top; font-size: 10px }
-p { clear: both; }
-.submit { margin-top: 1em; }
-em { font-weight: bold; padding-right: 1em; vertical-align: top; }
-body{
-	background: #000000;
-
+* {
+    font-family: 'Verdana', sans-serif;
+    font-size: 16px; 
+    margin: 0;
+    padding: 0;
+    color: rgb(33, 33, 33); 
 }
 
-#main{
-	width:500px;
-	margin:auto;
+label {
+    display: block;
+    margin-top: 12px;
 }
 
-#geral{
-	width:500px;
-	background:#2b00ff;
-	float:left;
-	padding: 15px;
+label.error {
+    float: none;
+    color: rgb(234, 67, 53); 
+    margin: 0 .5em 0 0;
+    vertical-align: top;
+    font-size: 11px; 
 }
 
-#header{
-	width:500px;
-	height:81px;
-	background:url(images/header.jpg);
-	float:left;
+p {
+    clear: both;
+    margin-top: 12px; 
 }
 
-.recados {
-	float: left;
-	width: 480px;
-	margin-bottom: 10px;
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #000000;
-	background-color: #EAF9FF;
-	padding: 10px;
-	list-style-type: none;
-	border-radius: 23px;
-	padding: 15px;
+.submit {
+    margin-top: 20px; 
+}
 
+em {
+    font-weight: bold;
+    padding-right: 1em;
+    vertical-align: top;
+}
+
+body {
+    background: #1e1e1e; 
+}
+
+#main {
+    width: 500px;
+    margin: auto;
+}
+
+#geral {
+    width: 520px;
+    background: #2b00ff;
+    float: left;
+    padding: 20px;
+    border-radius: 12px; 
+}
+
+#header {
+    width: 500px;
+    height: 81px;
+    background: url(images/header.jpg) no-repeat center center; 
+    background-size: cover;
+    float: left;
+    border-radius: 8px;
 }
 
 #header h1 {
-	font-family: "Trebuchet MS", Tahoma, Verdana, "Agency FB", Arial;
-	font-size: 18px;
-	font-style: normal;
-	font-weight: bold;
-	color: #ffffff;
-	margin-top: 20px;
-	margin-left: 5px;
+    font-family: "Trebuchet MS", Tahoma, Verdana, "Agency FB", Arial;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+    margin-top: 20px;
+    margin-left: 170px; 
 }
+
 #header p {
-	font-size: 13px;
-	font-style: normal;
-	color: #000000;
-	margin-left: 5px;
+    font-size: 14px;
+    color: #fff;
+    margin-left: 10px;
 }
+
 #header a {
-	font-weight: bold;
-	color: #333333;
+    font-weight: bold;
+    color: #ffcc00; 
 }
+
 #formulario_mural {
-	text-align: center;
-	float: left;
-	width: 480px;
-	margin-bottom: 10px;
-	background:#00d0ff;
-	padding:10px;
-	border-radius: 23px;
+    text-align: center;
+    float: left;
+    width: 480px;
+    margin-bottom: 15px;
+    background: #00d0ff;
+    padding: 20px;
+    border-radius: 12px; 
 }
-#mural input{
-	width: 400px;
-	padding-top: 7px;
-	padding-bottom: 7px;
-	margin-top: 3px;
-	border: 1px solid #000000;
-	border-radius: 23px;
+
+#mural input {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 5px;
+    border: 1px solid #333;
+    border-radius: 23px;
+    background-color: #fff;
+    font-size: 14px;
 }
+
 #mural textarea {
-	padding: 5px;
-	height: 90px;
-	width: 140px;
-	border: 1px solid #000000;
-	border-radius: 23px;
+    padding: 10px;
+    height: 100px;
+    width: 100%;
+    border: 1px solid #333;
+    border-radius: 23px;
+    background-color: #ffffff;
+    font-size: 14px;
 }
+
 .btn {
-	padding: 7px;
-	width: 100px;
-	border: 1px solid #333333;
-	cursor:pointer;
+	
+    padding: 10px;
+    width: 120px; 
+    border: 1px solid #333;
+    background: #2d2d2d; 
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px; 
 }
 
-.btn:hover{
-	background:#333333;
-	color:#999999;
+.btn:hover {
+    background: #4a4a4a;
+    color: #e0e0e0;
 }
 
-#footer{
-	width:500px;
-	height:30px;
-	float:left;
-	display:block;
-	background:#000000;
-	line-height:30px;
+#footer {
+    width: 500px;
+    height: 40px; 
+    float: left;
+    display: block;
+    background: #1e1e1e;
+    line-height: 40px;
+    text-align: center;
+    border-top: 2px solid #333; 
 }
 
-#footer p{
-	color:#666666;
-	padding-left:10px;
+#footer p {
+    color: #999;
 }
 
-#footer a{
-	color:#0000ff;
-	text-decoration:none;
+#footer a {
+    color: #ffcc00; 
+    text-decoration: none;
 }
-.produto img{
 
-	width:400px ;
-	height:400px;
+.produto img {
+    width: 100%; 
+    height: auto;
+    border-radius: 8px; 
 }
